crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@72.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO pagg_tab_m SELECT i % 30, i % 40, i % 50 FROM generate_series(0, 2999) i;"
---
InsertStmt@0..85
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..22
    Ident@12..22 "pagg_tab_m"
  Whitespace@22..23 " "
  SelectStmt@23..84
    Select@23..29 "SELECT"
    Whitespace@29..30 " "
    ResTarget@30..36
      AExpr@30..36
        ColumnRef@30..31
          Ident@30..31 "i"
        Whitespace@31..32 " "
        Ascii37@32..33 "%"
        Whitespace@33..34 " "
        AConst@34..36
          Iconst@34..36 "30"
    Ascii44@36..37 ","
    Whitespace@37..38 " "
    ResTarget@38..44
      AExpr@38..44
        ColumnRef@38..39
          Ident@38..39 "i"
        Whitespace@39..40 " "
        Ascii37@40..41 "%"
        Whitespace@41..42 " "
        AConst@42..44
          Iconst@42..44 "40"
    Ascii44@44..45 ","
    Whitespace@45..46 " "
    ResTarget@46..52
      AExpr@46..52
        ColumnRef@46..47
          Ident@46..47 "i"
        Whitespace@47..48 " "
        Ascii37@48..49 "%"
        Whitespace@49..50 " "
        AConst@50..52
          Iconst@50..52 "50"
    Whitespace@52..53 " "
    From@53..57 "FROM"
    Whitespace@57..58 " "
    RangeFunction@58..84
      List@58..81
        FuncCall@58..81
          Ident@58..73 "generate_series"
          Ascii40@73..74 "("
          AConst@74..75
            Iconst@74..75 "0"
          Ascii44@75..76 ","
          Whitespace@76..77 " "
          AConst@77..81
            Iconst@77..81 "2999"
      Ascii41@81..82 ")"
      Whitespace@82..83 " "
      Alias@83..84
        Ident@83..84 "i"
  Ascii59@84..85 ";"

