crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@81.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE pagg_tab_ml_p1 PARTITION OF pagg_tab_ml FOR VALUES FROM (0) TO (12);
---
CreateStmt@0..81
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..27
    Ident@13..27 "pagg_tab_ml_p1"
  Whitespace@27..28 " "
  Partition@28..37 "PARTITION"
  Whitespace@37..38 " "
  Of@38..40 "OF"
  Whitespace@40..41 " "
  RangeVar@41..52
    Ident@41..52 "pagg_tab_ml"
  Whitespace@52..53 " "
  For@53..56 "FOR"
  Whitespace@56..57 " "
  Values@57..63 "VALUES"
  Whitespace@63..64 " "
  PartitionBoundSpec@64..79
    From@64..68 "FROM"
    Whitespace@68..69 " "
    Ascii40@69..70 "("
    AConst@70..71
      Iconst@70..71 "0"
    Ascii41@71..72 ")"
    Whitespace@72..73 " "
    To@73..75 "TO"
    Whitespace@75..76 " "
    Ascii40@76..77 "("
    AConst@77..79
      Iconst@77..79 "12"
  Ascii41@79..80 ")"
  Ascii59@80..81 ";"

