crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@82.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE pagg_tab_ml_p2 PARTITION OF pagg_tab_ml FOR VALUES FROM (12) TO (20) PARTITION BY LIST (c);
---
CreateStmt@0..104
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..27
    Ident@13..27 "pagg_tab_ml_p2"
  Whitespace@27..28 " "
  Partition@28..37 "PARTITION"
  Whitespace@37..38 " "
  Of@38..40 "OF"
  Whitespace@40..41 " "
  RangeVar@41..52
    Ident@41..52 "pagg_tab_ml"
  Whitespace@52..53 " "
  For@53..56 "FOR"
  Whitespace@56..57 " "
  Values@57..63 "VALUES"
  Whitespace@63..64 " "
  PartitionBoundSpec@64..80
    From@64..68 "FROM"
    Whitespace@68..69 " "
    Ascii40@69..70 "("
    AConst@70..72
      Iconst@70..72 "12"
    Ascii41@72..73 ")"
    Whitespace@73..74 " "
    To@74..76 "TO"
    Whitespace@76..77 " "
    Ascii40@77..78 "("
    AConst@78..80
      Iconst@78..80 "20"
  Ascii41@80..81 ")"
  Whitespace@81..82 " "
  PartitionSpec@82..102
    Partition@82..91 "PARTITION"
    Whitespace@91..92 " "
    By@92..94 "BY"
    Whitespace@94..95 " "
    Ident@95..99 "LIST"
    Whitespace@99..100 " "
    Ascii40@100..101 "("
    PartitionElem@101..102
      Ident@101..102 "c"
  Ascii41@102..103 ")"
  Ascii59@103..104 ";"

