crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@83.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "CREATE TABLE pagg_tab_ml_p2_s1 PARTITION OF pagg_tab_ml_p2 FOR VALUES IN ('0000', '0001', '0002');"
---
CreateStmt@0..98
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..30
    Ident@13..30 "pagg_tab_ml_p2_s1"
  Whitespace@30..31 " "
  Partition@31..40 "PARTITION"
  Whitespace@40..41 " "
  Of@41..43 "OF"
  Whitespace@43..44 " "
  RangeVar@44..58
    Ident@44..58 "pagg_tab_ml_p2"
  Whitespace@58..59 " "
  For@59..62 "FOR"
  Whitespace@62..63 " "
  Values@63..69 "VALUES"
  Whitespace@69..70 " "
  PartitionBoundSpec@70..96
    InP@70..72 "IN"
    Whitespace@72..73 " "
    Ascii40@73..74 "("
    AConst@74..80
      Sconst@74..80 "'0000'"
    Ascii44@80..81 ","
    Whitespace@81..82 " "
    AConst@82..88
      Sconst@82..88 "'0001'"
    Ascii44@88..89 ","
    Whitespace@89..90 " "
    AConst@90..96
      Sconst@90..96 "'0002'"
  Ascii41@96..97 ")"
  Ascii59@97..98 ";"

