crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@87.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: CREATE TABLE pagg_tab_ml_p3_s2 PARTITION OF pagg_tab_ml_p3 FOR VALUES FROM (7) TO (10);
---
CreateStmt@0..87
  Create@0..6 "CREATE"
  Whitespace@6..7 " "
  Table@7..12 "TABLE"
  Whitespace@12..13 " "
  RangeVar@13..30
    Ident@13..30 "pagg_tab_ml_p3_s2"
  Whitespace@30..31 " "
  Partition@31..40 "PARTITION"
  Whitespace@40..41 " "
  Of@41..43 "OF"
  Whitespace@43..44 " "
  RangeVar@44..58
    Ident@44..58 "pagg_tab_ml_p3"
  Whitespace@58..59 " "
  For@59..62 "FOR"
  Whitespace@62..63 " "
  Values@63..69 "VALUES"
  Whitespace@69..70 " "
  PartitionBoundSpec@70..85
    From@70..74 "FROM"
    Whitespace@74..75 " "
    Ascii40@75..76 "("
    AConst@76..77
      Iconst@76..77 "7"
    Ascii41@77..78 ")"
    Whitespace@78..79 " "
    To@79..81 "TO"
    Whitespace@81..82 " "
    Ascii40@82..83 "("
    AConst@83..85
      Iconst@83..85 "10"
  Ascii41@85..86 ")"
  Ascii59@86..87 ";"

