crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@9.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO pagg_tab SELECT i % 20, i % 30, to_char(i % 12, 'FM0000'), i % 30 FROM generate_series(0, 2999) i;"
---
InsertStmt@0..110
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "pagg_tab"
  Whitespace@20..21 " "
  SelectStmt@21..109
    Select@21..27 "SELECT"
    Whitespace@27..28 " "
    ResTarget@28..34
      AExpr@28..34
        ColumnRef@28..29
          Ident@28..29 "i"
        Whitespace@29..30 " "
        Ascii37@30..31 "%"
        Whitespace@31..32 " "
        AConst@32..34
          Iconst@32..34 "20"
    Ascii44@34..35 ","
    Whitespace@35..36 " "
    ResTarget@36..42
      AExpr@36..42
        ColumnRef@36..37
          Ident@36..37 "i"
        Whitespace@37..38 " "
        Ascii37@38..39 "%"
        Whitespace@39..40 " "
        AConst@40..42
          Iconst@40..42 "30"
    Ascii44@42..43 ","
    Whitespace@43..44 " "
    ResTarget@44..68
      FuncCall@44..68
        Ident@44..51 "to_char"
        Ascii40@51..52 "("
        AExpr@52..58
          ColumnRef@52..53
            Ident@52..53 "i"
          Whitespace@53..54 " "
          Ascii37@54..55 "%"
          Whitespace@55..56 " "
          AConst@56..58
            Iconst@56..58 "12"
        Ascii44@58..59 ","
        Whitespace@59..60 " "
        AConst@60..68
          Sconst@60..68 "'FM0000'"
    Ascii41@68..69 ")"
    Ascii44@69..70 ","
    Whitespace@70..71 " "
    ResTarget@71..77
      AExpr@71..77
        ColumnRef@71..72
          Ident@71..72 "i"
        Whitespace@72..73 " "
        Ascii37@73..74 "%"
        Whitespace@74..75 " "
        AConst@75..77
          Iconst@75..77 "30"
    Whitespace@77..78 " "
    From@78..82 "FROM"
    Whitespace@82..83 " "
    RangeFunction@83..109
      List@83..106
        FuncCall@83..106
          Ident@83..98 "generate_series"
          Ascii40@98..99 "("
          AConst@99..100
            Iconst@99..100 "0"
          Ascii44@100..101 ","
          Whitespace@101..102 " "
          AConst@102..106
            Iconst@102..106 "2999"
      Ascii41@106..107 ")"
      Whitespace@107..108 " "
      Alias@108..109
        Ident@108..109 "i"
  Ascii59@109..110 ";"

