crates/pg_syntax/tests/snapshots/postgres_regress/partition_aggregate@90.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO pagg_tab_ml SELECT i % 30, i % 10, to_char(i % 4, 'FM0000') FROM generate_series(0, 29999) i;"
---
InsertStmt@0..105
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..23
    Ident@12..23 "pagg_tab_ml"
  Whitespace@23..24 " "
  SelectStmt@24..104
    Select@24..30 "SELECT"
    Whitespace@30..31 " "
    ResTarget@31..37
      AExpr@31..37
        ColumnRef@31..32
          Ident@31..32 "i"
        Whitespace@32..33 " "
        Ascii37@33..34 "%"
        Whitespace@34..35 " "
        AConst@35..37
          Iconst@35..37 "30"
    Ascii44@37..38 ","
    Whitespace@38..39 " "
    ResTarget@39..45
      AExpr@39..45
        ColumnRef@39..40
          Ident@39..40 "i"
        Whitespace@40..41 " "
        Ascii37@41..42 "%"
        Whitespace@42..43 " "
        AConst@43..45
          Iconst@43..45 "10"
    Ascii44@45..46 ","
    Whitespace@46..47 " "
    ResTarget@47..70
      FuncCall@47..70
        Ident@47..54 "to_char"
        Ascii40@54..55 "("
        AExpr@55..60
          ColumnRef@55..56
            Ident@55..56 "i"
          Whitespace@56..57 " "
          Ascii37@57..58 "%"
          Whitespace@58..59 " "
          AConst@59..60
            Iconst@59..60 "4"
        Ascii44@60..61 ","
        Whitespace@61..62 " "
        AConst@62..70
          Sconst@62..70 "'FM0000'"
    Ascii41@70..71 ")"
    Whitespace@71..72 " "
    From@72..76 "FROM"
    Whitespace@76..77 " "
    RangeFunction@77..104
      List@77..101
        FuncCall@77..101
          Ident@77..92 "generate_series"
          Ascii40@92..93 "("
          AConst@93..94
            Iconst@93..94 "0"
          Ascii44@94..95 ","
          Whitespace@95..96 " "
          AConst@96..101
            Iconst@96..101 "29999"
      Ascii41@101..102 ")"
      Whitespace@102..103 " "
      Alias@103..104
        Ident@103..104 "i"
  Ascii59@104..105 ";"

